name:                servant-base64
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/blakesikes/servant-base64#readme
license:             BSD3
license-file:        LICENSE
author:              Blake Sikes
maintainer:          Blake Sikes
copyright:           2018 Blake Sikes
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable servant-base64-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-base64
  default-language:    Haskell2010

test-suite servant-base64-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-base64
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , aeson
                     , wai-extra 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blakesikes/servant-base64
